[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elapy"
version = "0.1.0"
description = "A Python package for landscape analysis."
authors = [{ name = "okumakito" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
	"numpy",
	"pandas",
	"networkx",
	"scipy",
	"matplotlib",
	"seaborn",
	"plotly"
]

[project.urls]
homepage = "https://github.com/okumakito/elapy"
repository = "https://github.com/okumakito/elapy"

[tool.setuptools]
packages = ["elapy"]
